_sass/_custom.scss
@import "libs/table-grid";

$brand-color: #c12e39;

.clearfix {
    &:after {
        visibility: hidden;
        display: block;
        font-size: 0;
        content: " ";
        clear: both;
        height: 0;
    }
    display: inline-block;
}

/* start commented backslash hack \*/
* html .clearfix {
    height: 1%;
}

.clearfix {
    display: block;
}

/* close commented backslash hack */

img {
    max-width: 100%;
    max-height: 100%;
}

#banner {
    color: #6c6e70;

    .tagline {
        text-transform: uppercase;
        text-align: right;
        color: $brand-color;
        font-size: 1.5em;
        letter-spacing: 10px;
    }

    .logo {
        //max-width: 100%;
        //margin: 0 15%;

        img {
            max-width: 100%;
        }
    }

    .button {
        color: $brand-color;
        background-color: rgba(255, 255, 255, 0.90);
        box-shadow: none;

        &:hover {
            background-color: rgba(255, 255, 255, 1);
        }

        &.special {
            color: #fff !important;
            background-color: $brand-color;
        }
    }
}

#main {
    .box {
        &.shadow {
            box-shadow: 0px -10px 75px -10px rgba(176, 176, 176, 0.6);
        }

        .inline-img {
            float: left;
            padding: 10px 20px;
        }

        header {
            border-bottom: solid 2px #e5e5e5;
            margin-bottom: 20px;

            h3 {
                margin-bottom: 5px;
            }
        }

        p {
            text-align: justify;
            &.major {
                text-align: center;
                font-size: 1.25em;
                line-height: 1.5em;
                margin: 1.5em 0 0 0;
            }
        }
    }
}

.box-row {
    margin-bottom: 2em;

    .grid-col {
        height: 0;

        .box {
            height: 100%;
            margin-left: 1em;
            margin-right: 1em;
        }

        &:first-child .box {
            margin-left: 0;
        }

        &:last-child .box {
            margin-right: 0;
        }

    }

    @include breakpoint(mobile) {
        margin-bottom: 0;

        .grid-col {
            height: auto;

            &:first-child .box {
                margin-left: 1em;
            }

            &:last-child .box {
                margin-right: 1em;
            }
        }
    }

}

#cta {
    background-color: $brand-color;
}

